--- a/style.css
+++ b/style.css
@@ -9,8 +9,18 @@ body{
   font-size: 16px;
 }
 
+#imgMyFace{
+  position: relative;
+  width: 30%;
+  height: 100%;
+  background-color: transparent;
+  float: left;
+  margin-right: 40px;
+  margin-top: 20px;
+}
+
 #container{
-    width: 980px;
+   width: 980px;
    margin: 0 auto;
 }
 
@@ -99,7 +109,8 @@ a:hover {
   color: purple;
 }
 #banner{
-  text-align: center;
+  position: relative;
+  text-align: left;
   padding: 10px;
   margin-bottom: 70px;
   color: white;
@@ -115,6 +126,15 @@ a:hover {
   font-size: 25px;
   font-weight: lighter;
   margin-bottom: 5px
+}
+
+#buttonText {
+  color: white;
+  opacity: 0.8;
+  font-size: 25px;
+  font-weight: lighter;
+  margin-bottom: 5px;
+  text-align: center;
 }
 
 @keyframes buttonAnimation {
@@ -134,6 +154,7 @@ a:hover {
     margin: 10px;
     text-decoration: none;
     text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+    text-align: center;
 }
 
 .button:hover {
@@ -153,9 +174,10 @@ a:hover {
 
 
 #footer{
+  position: relative;
   padding: 10px;
   color: lightgrey;
-  text-align: center;
+  text-align: right;
 }
 
 @keyframes iconAnimation{
